--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="project">
           <h3 onclick="window.open('https://thunderous-lamington-dd2d65.netlify.app/', '_blank')">Passanger Counter</h3>
           <iframe
-            src="https://thunderous-lamington-dd2d65.netlify.app/"
+            src="https://khushwantprajapati.github.io/counter.github.io/"
             name="iframe1"
             height="200"
             width="300"
