--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h2 class="section--title section--title--projects">My Projects</h2>
       <div class="myprojects">
         <div class="project">
-          <h3 onclick="window.open('https://thunderous-lamington-dd2d65.netlify.app/', '_blank')">Passanger Counter</h3>
+          <h3 onclick="window.open('https://khushwantprajapati.github.io/counter.github.io/', '_blank')">Passanger Counter</h3>
           <iframe
             src="https://khushwantprajapati.github.io/counter.github.io/"
             name="iframe1"
